# knowledge-agent

./: .gitignore  README.md  main.py  pyproject.toml
data/: example.md
docs/: knowledge_agent_casestudy.md
scripts/: evaluate.py  ingest.py
src/knowledge_agent/: config.py  memory.py  tools.py
tests/: eval_queries.json
